# cmake_ti

./: .gitignore  CMakeLists.txt  example.syscfg  generate_appimage.sh  generate_files.sh  hello_world.release.appimage  hello_world.release.appimage.hs_fs  hello_world.release.rprc
tools/: default_sbl_ospi.cfg  env_config.json  generate_appimage.sh  sysctl_control.py
